@@ -1,5 +1,5 @@
 name: DotaMine
-version: 0.3.1
+version: 0.4
 author: rfsantos1996
 main: com.jabyftw.dotamine.DotaMine
 description: Dota on Minecraft
